--- a/assets/css/transfer.css
+++ b/assets/css/transfer.css
@@ -62,6 +62,7 @@ img.arr-icon {
     cursor: pointer;
     position: relative;
     transition: all 1s;
+    color: var(--pry-txt-color);
 }
 .flex-div.option-div:hover{
     background: rgba(12, 37, 86, 0.1);
