--- a/assets/css/topnav.css
+++ b/assets/css/topnav.css
@@ -18,10 +18,10 @@ div#top-nav {
     border-width: 0;
     font-size: 16px;
 }
-#search-input:focus{
+/* #search-input:focus{
     border-bottom: 1px solid rgba(2, 44, 129, 0.8);
     border-width: 1px;
-}
+} */
 #search-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: rgba(2, 44, 129, 0.6);
   opacity: 1; /* Firefox */
