--- a/assets/css/register-biz.css
+++ b/assets/css/register-biz.css
@@ -11,7 +11,7 @@
     position: relative;
     min-height: 34px;
     display: block;
-    padding-left: 0;
+    /*padding-left: 0;*/
     margin: 0 auto;
     font-weight: normal;
     cursor: pointer;
